# CUDA_PGM_fixer

./: .gitignore  CMakeLists.txt
src/: fix_cpu.cc  fix_gpu.cu  fix_gpu.hh  image.hh  main.cu  reduce.cu  scan.cu  step_1.cu  step_2.cu  step_3.cu  utils.cu
